language_tests/source_files/invalid/printf_argument_count_mismatch_literal.tr
func main() {
    printf("%d %s", 1)
}
